# html-slacker

./: pyproject.toml  test_general.py
htmlslacker/: __init__.py  htmlslacker.py
